[tool.poetry]
name = "gdd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.1.2"
tabulate = "^0.8.7"
lxml = "^4.5.2"
colorama = "^0.4.3"
pytz = "^2020.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
